--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "author": "A-Abdeen <ahmed.yahya18@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.17.1"
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
+    "slugify": "^1.4.6"
   },
   "scripts": {
     "start": "nodemon app.js"
